# ForSureLLM

./: .dockerignore  .env.example  .gitignore  Claude.MD  LICENSE  README.md  README_en.md  llm_config.yaml  pyproject.toml
api/: Dockerfile  app.py  docker-compose.yml
data/labeled/: en.jsonl  en_clean.jsonl  fr.jsonl  fr_clean.jsonl  idioms_deep.jsonl  seed_slang_abbrev.jsonl  seed_weak_categories.jsonl
data/raw/: en.jsonl  fr.jsonl  idioms.jsonl
data/splits/: test.jsonl  train.jsonl  val.jsonl
docs/: brief.md
evals/: adversarial.jsonl  bench_baselines.json  compare_variants.json  last_report.json  robustness_report.json
forsurellm/: __init__.py  classifier.py
forsurellm/models/: benchmark.json  benchmark_fr-en.json  config.json  config_fr-en.json
scripts/: augment_idioms.py  augment_idioms_deep.py  calibrate.py  clean_dataset.py  eval.py  export.py  generate_dataset.py  label_dataset.py  repl.py  server.py
space/: MODEL_CARD.md  README.md  app.py  requirements.txt  tokenizer_fr-en.json
tests/: test_classifier.py
tools/: _variant.py  apply_label_fixes.py  audit_test_set.py  bench_baselines.py  compare_variants.py  deploy_space.py  eval.py  gen_symbolic.py  prune_vocab.py  robustness.py  server.py
training/: augment_idioms.py  augment_idioms_deep.py  export.py  generate.py  label.py  train.py
web/: index.html
yesno/: __init__.py  classifier.py  llm.py
yesno/models/: benchmark.json
