[project]
name = "ForSureLLM"
version = "0.1.0"
description = "Distilled yes/no/unknown classifier (FR+EN) — local ONNX inference, ~2 ms CPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.15"

# Runtime deps : minimum to call `from forsurellm import classify`.
# Upper bounds capped at next major to absorb 1-2 years of security patches
# without breaking on a future major release. Bump intentionally.
dependencies = [
    "onnxruntime>=1.17,<2.0",
    "tokenizers>=0.15,<1.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
# Training pipeline (Sonnet generation + Haiku labeling + MiniLM fine-tune + ONNX export).
train = [
    "litellm>=1.50,<2.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "transformers>=4.40,<5.0",
    "datasets>=2.18,<5.0",
    "torch>=2.2,<3.0",
    "optimum[onnxruntime]>=1.19,<3.0",
    "scikit-learn>=1.4,<2.0",
]

# FastAPI test server (`python tools/server.py`).
web = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
]

# Tests + benchmarks.
dev = [
    "pytest>=7.0,<10.0",
]

# Head-to-head benchmark vs Haiku/cosine baselines.
bench = [
    "litellm>=1.50,<2.0",
    "python-dotenv>=1.0,<2.0",
    "sentence-transformers>=2.7,<6.0",
]

# Tooling for HF Space deploy + LLM-assisted audit/symbolic generation.
ops = [
    "huggingface-hub>=0.20,<1.0",
    "litellm>=1.50,<2.0",
    "python-dotenv>=1.0,<2.0",
    "psutil>=5.9,<7.0",
    "requests>=2.28,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forsurellm"]
